--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,6 @@ jobs:
 
       - name: scan with trivy
         uses: aquasecurity/trivy-action@master
-        with: 
-          image-ref: 'my-app:latest'
-          severity: 'HIGH, CRITICAL'
-          ignore-unfixed: true
-          exit-code: '0'
-          format: 'table'
-
+      
       - name: Deploy or next steps
-        if: success()
-        run: echo "no critical or high"
-
+        run: echo "Scan completed. Proceeding to next step..."
